--- a/index.html
+++ b/index.html
@@ -328,19 +328,19 @@ body.dark .icon {
     <path d="M21 12.79A9 9 0 0112.21 3a7 7 0 100 14.58A9 9 0 0021 12.79z"/>
   </svg>
 </div>
-
-<!-- All Programs Card  -->
+  
+<!-- Podcast -  Card  -->
  <div class="iphone-frame">
-  <h1>Programs</h1>
-  <h2>List</h2>
-  <a href="https://www.artofliving.org/node/1302793" class="button" target="_blank">Check here ♡ </a>
-  <p class="subtitle">Next up, Lined up 🎺</p>
-  <div class="footer">
+  <h1>Podcasts</h1>
+  <h2>With Vishal Merani</h2>
+  <a href="https://podcasts.vishalmerani.com/" class="button" target="_blank">🎧 Listen Now</a>
+  <p class="subtitle">Curated talks & insights</p>
+  <div class="footer"> <br>
 ॐ  Jai Guru Dev ॐ
 </div>  
 </div>
 
-<!-- Secrets of the Subtle  -->
+<!-- Secrets of the Subtle Card -->
  <div class="iphone-frame">
   <h1>Currently Screening</h1>
   <h2>Secrets of the Subtle</h2>
@@ -362,7 +362,7 @@ body.dark .icon {
 </div>
 
 
-  <!-- Card 1 -->
+  <!-- DSAR Card -->
   <div class="iphone-frame">
     <h1>This July,</h1>
     <h2>Discover DSAR</h2>
@@ -398,13 +398,13 @@ body.dark .icon {
   </div>
 
 
-  <!-- Card 2 -->
+  <!-- Happiness Program in Ashram Card -->
   <div class="iphone-frame">
     <h1>This July </h1>
     <h2>Happiness Program</h2>
-    <p class="subtitle">with Vishal Merani</p>
+    <p class="subtitle">Chartered Accountants Special</p>
     <h3>Hyper Detox with Sudarshan Kriya</h3>
-    <p class="subtitle">In person | English, Hindi</p>
+    <p class="subtitle"> with Vishal Merani, In person | English, Hindi</p>
 
     <a href="https://programs.vvmvp.org/events/553/" class="button" target="_blank"> July 26–28, Register here</a>
 
@@ -442,7 +442,7 @@ body.dark .icon {
 </div>
   </div>
 
-<!-- Card 3 -->
+<!-- Happiness Program in City Card -->
   <div class="iphone-frame">
     <h1>This July </h1>
     <h2>Happiness Program</h2>
@@ -480,7 +480,7 @@ body.dark .icon {
 </div>
   </div>
 
-  <!-- Card 4 -->
+  <!-- Sahaj Meditation Card -->
   <div class="iphone-frame">
     <h1>mostly Monthly,</h1>
     <h2>Online</h2>
@@ -489,7 +489,7 @@ body.dark .icon {
     <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
    <ul class="features">
     <li>⤷ </li> </ul>
-    <a href="https://www.artofliving.online/registration.php?event_id=889316" class="button" target="_blank">July 25-27, 7a-9a IST, Register here</a> 
+    <a href="https://www.artofliving.online/registration.php?event_id=889316" class="button" target="_blank">July 26-28, 7a-9a IST, Register here</a> 
     <ul class="features">
       <li>⤷ Personal</li>
       <li>⤷ Customized</li>
@@ -518,7 +518,7 @@ body.dark .icon {
 
 
 
-  <!-- Card 5 -->
+  <!-- Scanning Card  -->
   <div class="iphone-frame">
     <h1>Scanning,</h1>
     <h2>KaalGyaan Sessions</h2>
@@ -551,7 +551,7 @@ body.dark .icon {
   </div>
 
 
-  <!-- Card 6 -->
+  <!-- L & B Session Card -->
   <div class="iphone-frame">
     <h1>Pain Management,</h1>
     <h2>L&B Sessions</h2>
@@ -576,7 +576,7 @@ body.dark .icon {
 </div>
   </div>
 
- <!-- Card 7 -->
+ <!-- Oneline Meditation & Breath Card -->
   <div class="iphone-frame">
     <h1> Workshop,</h1>
     <h2> Meditation and Breath </h2></h2>
@@ -608,27 +608,27 @@ body.dark .icon {
   </div>
 
 
-<!-- Card 8 - Image Only -->
+<!-- VM themed Image Card -->
 <div class="iphone-frame" style="padding: 0; border: none; box-shadow: none;">
   <img src="zenvm.png" alt="Meditation Image" style="width: 100%; border-radius: 20px;"/>
     
   </div>
 </div>
 
-<!-- Podcast -  Card 9 -->
+<!-- All Programs Card  -->
  <div class="iphone-frame">
-  <h1>Podcasts</h1>
-  <h2>With Vishal Merani</h2>
-  <a href="https://podcasts.vishalmerani.com/" class="button" target="_blank">🎧 Listen Now</a>
-  <p class="subtitle">Curated talks & insights</p>
-  <div class="footer"> <br>
+  <h1>Programs</h1>
+  <h2>List</h2>
+  <a href="https://www.artofliving.org/node/1302793" class="button" target="_blank">Check here ♡ </a>
+  <p class="subtitle">Next up, Lined up 🎺</p>
+  <div class="footer">
 ॐ  Jai Guru Dev ॐ
 </div>  
 </div>
 
 
 
-<!-- Social - Card 9 -->
+<!-- Social - Card  -->
 <div class="iphone-frame" style="text-align: center; padding-top: 24px;">
   <h1>To stay connected,</h1>
   <h2>@MeraniVishal</h2>
