--- a/index.html
+++ b/index.html
@@ -358,9 +358,40 @@ body.dark .icon {
 <!-- Serets of the Subtle Image Only -->
 <div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
   <img src="SecretsoftheSubtle.png" alt="Secrets of the Subtle" style="width: 100%; border-radius: 20px;" />
-  <div class="overlay-text"> 𓆩𓆪 Kashyapa Hall 21-31 July 7:30p </div>
+  <div class="overlay-text"> 𓆩𓆪 Kashyapa Hall 21-31 July 7:45p </div>
 </div>
 
+ <!-- Sahaj Meditation Card -->
+  <div class="iphone-frame">
+    <h1>mostly Monthly,</h1>
+    <h2>Online</h2>
+    <p class="subtitle">with Vishal Merani</p>
+    <h3>Lapse into meditation in minutes</h3>
+    <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
+   <ul class="features">
+    <li>⤷ </li> </ul>
+    <a href="https://www.artofliving.online/registration.php?event_id=898972" class="button" target="_blank">Aug 01-03, 7a-9a IST, Register here</a> 
+    <a href="https://www.artofliving.online/registration.php?event_id=898972" class="button" target="_blank">Aug 04-06, 7p-9p IST, Register here</a> 
+    <ul class="features">
+      <li>⤷ Personal</li>
+      <li>⤷ Customized</li>
+      <li>⤷ Yours</li>
+    </ul>
+    <ul class="timeline">
+      <li>Happening monthly-ish, tops</li>
+      <li>We'll touch base regularly, join whatsapp 💬 </li> 
+      <li class="location-text"><strong>📍 Zoom | Online</strong></li>
+    </ul>
+   <h4 class="queries-text">Queries & help @ 9818503888</h4>
+    <div class="copy-box">
+      <input class="copy-input" type="text" value="Sahaj Samadhi Meditation | Weekly | Help: 9818503888" id="copyText3" readonly>
+      <button class="copy-btn" onclick="copyToClipboard('copyText3', this)">Copy</button>
+      <a class="wa-icon" target="_blank" id="waLink3" title="Share on WhatsApp"></a>
+    </div>
+    <div class="footer"> 😌 3 days, 2 hours a day | ♡ Online Sessions <br>
+ॐ  Jai Guru Dev ॐ
+</div>
+  </div>
 
   <!-- DSAR Card -->
   <div class="iphone-frame">
@@ -479,44 +510,6 @@ body.dark .icon {
 ॐ  Jai Guru Dev ॐ
 </div>
   </div>
-
-  <!-- Sahaj Meditation Card -->
-  <div class="iphone-frame">
-    <h1>mostly Monthly,</h1>
-    <h2>Online</h2>
-    <p class="subtitle">with Vishal Merani</p>
-    <h3>Lapse into meditation in minutes</h3>
-    <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
-   <ul class="features">
-    <li>⤷ </li> </ul>
-    <a href="https://www.artofliving.online/registration.php?event_id=898972" class="button" target="_blank">Aug 01-03, 7a-9a IST, Register here</a> 
-    <ul class="features">
-      <li>⤷ Personal</li>
-      <li>⤷ Customized</li>
-      <li>⤷ Yours</li>
-    </ul>
-
-    <ul class="timeline">
-      <li>Happening monthly-ish, tops</li>
-      <li>We'll touch base regularly, join whatsapp 💬 </li> 
-      <li class="location-text"><strong>📍 Zoom | Online</strong></li>
-
-    </ul>
-
-   <h4 class="queries-text">Queries & help @ 9818503888</h4>
-
-    <div class="copy-box">
-      <input class="copy-input" type="text" value="Sahaj Samadhi Meditation | Weekly | Help: 9818503888" id="copyText3" readonly>
-      <button class="copy-btn" onclick="copyToClipboard('copyText3', this)">Copy</button>
-      <a class="wa-icon" target="_blank" id="waLink3" title="Share on WhatsApp"></a>
-    </div>
-
-    <div class="footer"> 😌 3 days, 2 hours a day | ♡ Online Sessions <br>
-ॐ  Jai Guru Dev ॐ
-</div>
-  </div>
-
-
 
   <!-- Scanning Card  -->
   <div class="iphone-frame">
