--- a/index.html
+++ b/index.html
@@ -396,56 +396,24 @@ body.dark .icon {
 <!-- Seva Image Only -->
 <div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
   <img src="vmvol.png" alt="Volunteer" style="width: 100%; border-radius: 20px;" />
-  <div class="overlay-text"> 𓆩𓆪 </div>
+  <div class="overlay-text"> 𓆩Join in𓆪 </div>
 </div>
+
   <!-- Seva Card -->
-<div class="card-container">
-  <div class="seva-card">
-    <h2>Seva — the joy of giving.</h2>
-    <p>Let us uplift consciousness collectively.<br>Let grace race ace — for all.</p>
+
+<div class="iphone-frame">
+    <h3>Come join me in Volunteering</h3>
+    <p>In the race of life, let grace be your ace</p>
+    <ul class="features">
+      <li>Uplift consciousness</li>
+      <li>Meet & Greet versions of you</li>
+      <li>Dwell in awe and awareness </li>
+      <li>Diverse paths. One place</li>
+    </ul>
   </div>
 </div>
 
-<style>
-.card-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 2rem;
-  background: radial-gradient(circle at top, #1f002b 0%, #0f001a 100%);
-}
 
-.seva-card {
-  background: rgba(255, 255, 255, 0.05);
-  border: 1px solid rgba(191, 120, 255, 0.3);
-  border-radius: 1.5rem;
-  padding: 2rem;
-  max-width: 400px;
-  text-align: center;
-  color: #e0d4ff;
-  font-family: 'Poppins', sans-serif;
-  box-shadow: 0 0 15px rgba(168, 108, 255, 0.2);
-  backdrop-filter: blur(10px);
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-
-.seva-card:hover {
-  transform: scale(1.03);
-  box-shadow: 0 0 25px rgba(180, 100, 255, 0.4);
-}
-
-.seva-card h2 {
-  font-size: 1.6rem;
-  margin-bottom: 1rem;
-  color: #d7aaff;
-}
-
-.seva-card p {
-  font-size: 1rem;
-  line-height: 1.5;
-  color: #cdbfff;
-}
-</style>
 
 
   <!-- DSAR Card -->
