--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ body.dark .icon {
   <!-- Seva Card -->
 
 <div class="iphone-frame">
-    <h3>Come join me in Volunteering</h3>
+    <h1>Come, volunteer with me</h1>
     <p>In the race of life, let grace be your ace</p>
     <ul class="features">
       <li>Uplift consciousness</li>
