--- a/index.html
+++ b/index.html
@@ -402,19 +402,16 @@ body.dark .icon {
   <!-- Seva Card -->
 
 <div class="iphone-frame">
-    <h1>Come, volunteer with me</h1>
-    <p>In the race of life, let grace be your ace</p>
+    <h1>Seva सेवा  </h1>
+    <p>to serve, to attend to, to honor </p>
     <ul class="features">
       <li>Uplift consciousness</li>
       <li>Meet & Greet versions of you</li>
       <li>Dwell in awe and awareness </li>
-      <li>Diverse paths. One place</li>
+      <li>Diverse paths yet One place</li>
     </ul>
   </div>
 </div>
-
-
-
 
   <!-- DSAR Card -->
   <div class="iphone-frame">
