--- a/index.html
+++ b/index.html
@@ -347,8 +347,8 @@ body.dark .icon {
   <p class = "subtitle">at Kashyapa hall for Ashramites</p>
   <h4>You can also  <a href="https://www.youtube.com/watch?v=2lgWqTEZRjk" class="button" target="_blank"> Watch ❤</a> here or in AOL app </h4>
   <ul class="features">
-      <li>21-31 July</li>
-      <li>Tag us in your story takeaways!</li>
+      <li> See you in next season </li>
+      <li> Drop us questions to ask Gurudev</li>
     </ul>
   <div class="footer">
 ॐ  Jai Guru Dev ॐ
@@ -358,7 +358,7 @@ body.dark .icon {
 <!-- Serets of the Subtle Image Only -->
 <div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
   <img src="SecretsoftheSubtle.png" alt="Secrets of the Subtle" style="width: 100%; border-radius: 20px;" />
-  <div class="overlay-text"> 𓆩𓆪 Kashyapa Hall 21-31 July 7:45p </div>
+  <div class="overlay-text"> 𓆩𓆪 </div>
 </div>
 
  <!-- Sahaj Meditation Card -->
@@ -370,8 +370,7 @@ body.dark .icon {
     <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
    <ul class="features">
     <li>⤷ </li> </ul>
-    <a href="https://www.artofliving.online/registration.php?event_id=898972" class="button" target="_blank">Aug 01-03, 7a-9a IST, Register here</a> 
-    <a href="https://www.artofliving.online/registration.php?event_id=900785" class="button" target="_blank">Aug 04-06, 7p-9p IST, Register here</a> 
+    <a  class="button" target="_blank">Booked for this season, see you in next</a> 
     <ul class="features">
       <li>⤷ Personal</li>
       <li>⤷ Customized</li>
@@ -415,14 +414,13 @@ body.dark .icon {
 
   <!-- DSAR Card -->
   <div class="iphone-frame">
-    <h1>This July,</h1>
+    <h1>This Aug,</h1>
     <h2>Discover DSAR</h2>
     <p class="subtitle">with Vishal Merani & Shweta Vyas</p>
     <h3>Stress, Sleep, Anxiety</h3>
     <p class="subtitle">Stop struggling! Decode and conquer</p>
 
-    <a href="https://www.artofliving.online/registration.php?event_id=888977" class="button" target="_blank"> 22-24 Jul, Register here </a>
-
+    <a  class="button" target="_blank">Booked for this season, see you in next</a> 
     <ul class="features">
       <li>To calm anxiety</li>
       <li>For better sleep</li>
@@ -430,7 +428,7 @@ body.dark .icon {
     </ul>
 
     <ul class="timeline">
-      <li>Time: 8:00 PM – 10:30 PM</li>
+      <li>DM to join in next season</li>
      <li class="location-text"><strong>📍 Zoom | Online</strong></li>
 
     </ul>
@@ -438,7 +436,7 @@ body.dark .icon {
     <h4 class="queries-text">Queries & help @ 9818503888</h4>
 
     <div class="copy-box">
-      <input class="copy-input" type="text" value="Deep Sleep & Anxiety Relief | 22–24 Jul 2025 | https://aolt.in/888977 | Help: 9818503888" id="copyText1" readonly>
+      <input class="copy-input" type="text" value="Deep Sleep & Anxiety Relief  | Help: 9818503888" id="copyText1" readonly>
       <button class="copy-btn" onclick="copyToClipboard('copyText1', this)">Copy</button>
       <a class="wa-icon" target="_blank" id="waLink1" title="Share on WhatsApp"></a>
     </div>
@@ -457,13 +455,9 @@ body.dark .icon {
     <h3>Hyper Detox with Sudarshan Kriya</h3>
     <p class="subtitle"> with Vishal Merani, In person | English, Hindi</p>
 
-    <a href="https://programs.vvmvp.org/events/553/" class="button" target="_blank"> July 25–27, Register here</a>
-
+    <a  class="button" target="_blank">Booked for this season, see you in next</a> 
     <ul class="timeline">
-      <li>24 Jul – Check-in after noon</li>
-      <li><strong>25 Jul</strong> – Starts 9:30 AM</li>
-      <li><strong>27 Jul</strong> – Ends 5:30 PM</li>
-      <li>28 Jul – Check-out by Noon</li>
+      <li>Join waitlist for next season</li>
     </ul>
 
     <h5>Complimentary at Ashram</h5>
@@ -483,28 +477,27 @@ body.dark .icon {
    <h4 class="queries-text">Queries & help @ 9818503888</h4>
 
     <div class="copy-box">
-      <input class="copy-input" type="text" value="Happiness Program | 25–27 July 2025 | https://programs.vvmvp.org/events/553 | Help: 9818503888" id="copyText2" readonly>
+      <input class="copy-input" type="text" value="Happiness Program  | Help: 9818503888" id="copyText2" readonly>
       <button class="copy-btn" onclick="copyToClipboard('copyText2', this)">Copy</button>
       <a class="wa-icon" target="_blank" id="waLink2" title="Share on WhatsApp"></a>
     </div>
 
-    <div class="footer">🦦🤌🏻 Starts 25 July 2025 | Bangalore ♡ Ashram <br>
+    <div class="footer">🦦🤌🏻 Starts soon again | Bangalore ♡ Ashram <br>
 ॐ  Jai Guru Dev ॐ
 </div>
   </div>
 
 <!-- Happiness Program in City Card -->
   <div class="iphone-frame">
-    <h1>This July </h1>
+    <h1>This Sept </h1>
     <h2>Happiness Program</h2>
-    <p class="subtitle">with Vishal Merani & Tanmay Shah 🎉 </p>
+    <p class="subtitle">with Vishal Merani  </p>
     <h3>Hyper Detox with Sudarshan Kriya</h3>
     <p class="subtitle">In person | English, Hindi</p>
 
-    <a href="https://www.artofliving.online/registration.php?event_id=890542" class="button" target="_blank"> July 29 – Aug 03, Register here</a>
-
+    <a  class="button" target="_blank">Booked for this season, see you in next</a> 
     <ul class="timeline">
-      <li><strong>Time </strong> 7:00 PM - 9:00 PM </li>
+      <li><strong> Join waitlist </strong> </li>
     </ul>
 
     <ul class="features">
@@ -513,7 +506,7 @@ body.dark .icon {
     </ul>
 
     <ul class="timeline">
-      <li><strong>📍Fortale Prime, JP Nagar 8th Phase, Jambu savari</strong><br>Bengaluru, Karnataka</li>
+      <li><strong>📍See you soon</strong><br>Bengaluru, Karnataka</li>
     </ul>
 
     <a href="https://maps.app.goo.gl/Z1NnMr2MvozvDgBm7" class="button" target="_blank">On Maps</a>
@@ -521,12 +514,12 @@ body.dark .icon {
    <h4 class="queries-text">Queries & help @ +917507180332, +919158888206 </h4>
 
     <div class="copy-box">
-      <input class="copy-input" type="text" value="Happiness Program | 29 Jul – 03 Aug 2025 |  https://aolt.in/891043 | Help: 9818503888" id="copyText22" readonly>
+      <input class="copy-input" type="text" value="Happiness Program | | Help: 9818503888" id="copyText22" readonly>
       <button class="copy-btn" onclick="copyToClipboard('copyText22', this)">Copy</button>
       <a class="wa-icon" target="_blank" id="waLink2" title="Share on WhatsApp"></a>
     </div>
 
-    <div class="footer">🦦🤌🏻 Starts 29 July 2025 | Bangalore ♡ JP Nagar <br>
+    <div class="footer">🦦🤌🏻 Starts soon| Bangalore ♡ JP Nagar <br>
 ॐ  Jai Guru Dev ॐ
 </div>
   </div>
@@ -597,12 +590,11 @@ body.dark .icon {
     <h3> learn well-being online </h3>
       <p class="subtitle">Just you, your breath, and a better you.</p>
 
-    <a href="https://www.artofliving.org/in-en/program/889064" class="button" target="_blank">July 31 - Aug 03, Register here</a> 
-
+    <a  class="button" target="_blank">Booked for this season, see you in next</a> 
 
     <ul class="timeline">
-    <li>Time: 6:30 AM – 08:30 AM</li>
-      <li> Weekends: 7:00 AM - 9:00 AM </li>
+    <li>See you soon </li>
+      <li> Join waitlist </li>
     <li><strong>📍 Online, Zoom </strong></li>
     </ul>
 
