--- a/index.html
+++ b/index.html
@@ -340,189 +340,6 @@ body.dark .icon {
 </div>  
 </div>
 
-<!-- Secrets of the Subtle Card -->
- <div class="iphone-frame">
-  <h1>Currently Screening</h1>
-  <h2>Secrets of the Subtle</h2>
-  <p class = "subtitle">at Kashyapa hall for Ashramites</p>
-  <h4>You can also  <a href="https://www.youtube.com/watch?v=2lgWqTEZRjk" class="button" target="_blank"> Watch ❤</a> here or in AOL app </h4>
-  <ul class="features">
-      <li> See you in next season </li>
-      <li> Drop us questions to ask Gurudev</li>
-    </ul>
-  <div class="footer">
-ॐ  Jai Guru Dev ॐ
-</div>  
-</div>
-
-<!-- Serets of the Subtle Image Only -->
-<div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
-  <img src="SecretsoftheSubtle.png" alt="Secrets of the Subtle" style="width: 100%; border-radius: 20px;" />
-  <div class="overlay-text"> 𓆩𓆪 </div>
-</div>
-
- <!-- Sahaj Meditation Card -->
-  <div class="iphone-frame">
-    <h1>mostly Monthly,</h1>
-    <h2>Online</h2>
-    <p class="subtitle">with Vishal Merani</p>
-    <h3>Lapse into meditation in minutes</h3>
-    <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
-   <ul class="features">
-    <li>⤷ </li> </ul>
-    <a  class="button" target="_blank">Booked for this season, see you in next</a> 
-    <ul class="features">
-      <li>⤷ Personal</li>
-      <li>⤷ Customized</li>
-      <li>⤷ Yours</li>
-    </ul>
-    <ul class="timeline">
-      <li>Happening monthly-ish, tops</li>
-      <li>We'll touch base regularly, join whatsapp 💬 </li> 
-      <li class="location-text"><strong>📍 Zoom | Online</strong></li>
-    </ul>
-   <h4 class="queries-text">Queries & help @ 9818503888</h4>
-    <div class="copy-box">
-      <input class="copy-input" type="text" value="Sahaj Samadhi Meditation | Weekly | Help: 9818503888" id="copyText3" readonly>
-      <button class="copy-btn" onclick="copyToClipboard('copyText3', this)">Copy</button>
-      <a class="wa-icon" target="_blank" id="waLink3" title="Share on WhatsApp"></a>
-    </div>
-    <div class="footer"> 😌 3 days, 2 hours a day | ♡ Online Sessions <br>
-ॐ  Jai Guru Dev ॐ
-</div>
-  </div>
-
-<!-- Seva Image Only -->
-<div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
-  <img src="vmvol.png" alt="Volunteer" style="width: 100%; border-radius: 20px;" />
-  <div class="overlay-text"> 𓆩Join in𓆪 </div>
-</div>
-
-  <!-- Seva Card -->
-
-<div class="iphone-frame">
-    <h1>Seva सेवा  </h1>
-    <p>to serve, to attend to, to honor </p>
-    <ul class="features">
-      <li>Uplift consciousness</li>
-      <li>Meet & Greet versions of you</li>
-      <li>Dwell in awe and awareness </li>
-      <li>Diverse paths yet One place</li>
-    </ul>
-  </div>
-</div>
-
-  <!-- DSAR Card -->
-  <div class="iphone-frame">
-    <h1>This Aug,</h1>
-    <h2>Discover DSAR</h2>
-    <p class="subtitle">with Vishal Merani & Shweta Vyas</p>
-    <h3>Stress, Sleep, Anxiety</h3>
-    <p class="subtitle">Stop struggling! Decode and conquer</p>
-
-    <a  class="button" target="_blank">Booked for this season, see you in next</a> 
-    <ul class="features">
-      <li>To calm anxiety</li>
-      <li>For better sleep</li>
-      <li>Activate relaxation</li>
-    </ul>
-
-    <ul class="timeline">
-      <li>DM to join in next season</li>
-     <li class="location-text"><strong>📍 Zoom | Online</strong></li>
-
-    </ul>
-
-    <h4 class="queries-text">Queries & help @ 9818503888</h4>
-
-    <div class="copy-box">
-      <input class="copy-input" type="text" value="Deep Sleep & Anxiety Relief  | Help: 9818503888" id="copyText1" readonly>
-      <button class="copy-btn" onclick="copyToClipboard('copyText1', this)">Copy</button>
-      <a class="wa-icon" target="_blank" id="waLink1" title="Share on WhatsApp"></a>
-    </div>
-
-    <div class="footer">💤 22–24 Jul 2025 | Evening ♡ Online Sessions <br>
-ॐ  Jai Guru Dev ॐ
-</div>
-  </div>
-
-
-  <!-- Happiness Program in Ashram Card -->
-  <div class="iphone-frame">
-    <h1>This July </h1>
-    <h2>Happiness Program</h2>
-    <p class="subtitle">Chartered Accountants Special</p>
-    <h3>Hyper Detox with Sudarshan Kriya</h3>
-    <p class="subtitle"> with Vishal Merani, In person | English, Hindi</p>
-
-    <a  class="button" target="_blank">Booked for this season, see you in next</a> 
-    <ul class="timeline">
-      <li>Join waitlist for next season</li>
-    </ul>
-
-    <h5>Complimentary at Ashram</h5>
-    <ul class="features">
-      <li>Rudra pooja meditation on Mondays</li>
-      <li>Regular follow-ups</li>
-      <li>Sattvic food</li>
-      <li>Free repeats outside ashram</li>
-    </ul>
-
-    <ul class="timeline">
-      <li><strong>📍 Art of Living International Center</strong><br>Bengaluru, Karnataka</li>
-    </ul>
-
-    <a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="button" target="_blank">On Maps</a>
-
-   <h4 class="queries-text">Queries & help @ 9818503888</h4>
-
-    <div class="copy-box">
-      <input class="copy-input" type="text" value="Happiness Program  | Help: 9818503888" id="copyText2" readonly>
-      <button class="copy-btn" onclick="copyToClipboard('copyText2', this)">Copy</button>
-      <a class="wa-icon" target="_blank" id="waLink2" title="Share on WhatsApp"></a>
-    </div>
-
-    <div class="footer">🦦🤌🏻 Starts soon again | Bangalore ♡ Ashram <br>
-ॐ  Jai Guru Dev ॐ
-</div>
-  </div>
-
-<!-- Happiness Program in City Card -->
-  <div class="iphone-frame">
-    <h1>This Sept </h1>
-    <h2>Happiness Program</h2>
-    <p class="subtitle">with Vishal Merani  </p>
-    <h3>Hyper Detox with Sudarshan Kriya</h3>
-    <p class="subtitle">In person | English, Hindi</p>
-
-    <a  class="button" target="_blank">Booked for this season, see you in next</a> 
-    <ul class="timeline">
-      <li><strong> Join waitlist </strong> </li>
-    </ul>
-
-    <ul class="features">
-      <li>Regular follow-ups</li>
-      <li>Free repeats outside ashram</li>
-    </ul>
-
-    <ul class="timeline">
-      <li><strong>📍See you soon</strong><br>Bengaluru, Karnataka</li>
-    </ul>
-
-    <a href="https://maps.app.goo.gl/Z1NnMr2MvozvDgBm7" class="button" target="_blank">On Maps</a>
-
-   <h4 class="queries-text">Queries & help @ +917507180332, +919158888206 </h4>
-
-    <div class="copy-box">
-      <input class="copy-input" type="text" value="Happiness Program | | Help: 9818503888" id="copyText22" readonly>
-      <button class="copy-btn" onclick="copyToClipboard('copyText22', this)">Copy</button>
-      <a class="wa-icon" target="_blank" id="waLink2" title="Share on WhatsApp"></a>
-    </div>
-
-    <div class="footer">🦦🤌🏻 Starts soon| Bangalore ♡ JP Nagar <br>
-ॐ  Jai Guru Dev ॐ
-</div>
-  </div>
 
   <!-- Scanning Card  -->
   <div class="iphone-frame">
@@ -581,6 +398,191 @@ body.dark .icon {
 ॐ  Jai Guru Dev ॐ
 </div>
   </div>
+
+<!-- Secrets of the Subtle Card -->
+ <div class="iphone-frame">
+  <h1>Joinin for future screenings</h1>
+  <h2>Secrets of the Subtle</h2>
+  <p class = "subtitle">at Kashyapa hall for Ashramites</p>
+  <h4>You can also  <a href="https://www.youtube.com/watch?v=2lgWqTEZRjk" class="button" target="_blank"> Watch ❤</a> here or in AOL app </h4>
+  <ul class="features">
+      <li> See you in next season </li>
+      <li> Drop us questions to ask Gurudev</li>
+    </ul>
+  <div class="footer">
+ॐ  Jai Guru Dev ॐ
+</div>  
+</div>
+
+<!-- Serets of the Subtle Image Only -->
+<div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
+  <img src="SecretsoftheSubtle.png" alt="Secrets of the Subtle" style="width: 100%; border-radius: 20px;" />
+  <div class="overlay-text"> 𓆩𓆪 </div>
+</div>
+
+ <!-- Sahaj Meditation Card -->
+  <div class="iphone-frame">
+    <h1>Join Waitlist,</h1>
+    <h2>Online</h2>
+    <p class="subtitle">with Vishal Merani</p>
+    <h3>Lapse into meditation in minutes</h3>
+    <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
+   <ul class="features">
+    <li>⤷ </li> </ul>
+    <a  class="button" target="_blank">Booked for this season, see you in next</a> 
+    <ul class="features">
+      <li>⤷ Personal</li>
+      <li>⤷ Customized</li>
+      <li>⤷ Yours</li>
+    </ul>
+    <ul class="timeline">
+      <li>Happening monthly-ish, tops</li>
+      <li>We'll touch base regularly, join whatsapp 💬 </li> 
+      <li class="location-text"><strong>📍 Zoom | Online</strong></li>
+    </ul>
+   <h4 class="queries-text">Queries & help @ 9818503888</h4>
+    <div class="copy-box">
+      <input class="copy-input" type="text" value="Sahaj Samadhi Meditation | Weekly | Help: 9818503888" id="copyText3" readonly>
+      <button class="copy-btn" onclick="copyToClipboard('copyText3', this)">Copy</button>
+      <a class="wa-icon" target="_blank" id="waLink3" title="Share on WhatsApp"></a>
+    </div>
+    <div class="footer"> 😌 3 days, 2 hours a day | ♡ Online Sessions <br>
+ॐ  Jai Guru Dev ॐ
+</div>
+  </div>
+
+<!-- Seva Image Only -->
+<div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
+  <img src="vmvol.png" alt="Volunteer" style="width: 100%; border-radius: 20px;" />
+  <div class="overlay-text"> 𓆩Join in𓆪 </div>
+</div>
+
+  <!-- Seva Card -->
+
+<div class="iphone-frame">
+    <h1>Seva सेवा  </h1>
+    <p>to serve, to attend to, to honor </p>
+    <ul class="features">
+      <li>Uplift consciousness</li>
+      <li>Meet & Greet versions of you</li>
+      <li>Dwell in awe and awareness </li>
+      <li>Diverse paths yet One place</li>
+    </ul>
+  </div>
+</div>
+
+  <!-- DSAR Card -->
+  <div class="iphone-frame">
+    <h1>Join Waitlist</h1>
+    <h2>Discover DSAR</h2>
+    <p class="subtitle">with Vishal Merani & Shweta Vyas</p>
+    <h3>Stress, Sleep, Anxiety</h3>
+    <p class="subtitle">Stop struggling! Decode and conquer</p>
+
+    <a  class="button" target="_blank">Booked for this season, see you in next</a> 
+    <ul class="features">
+      <li>To calm anxiety</li>
+      <li>For better sleep</li>
+      <li>Activate relaxation</li>
+    </ul>
+
+    <ul class="timeline">
+      <li>DM to join in next season</li>
+     <li class="location-text"><strong>📍 Zoom | Online</strong></li>
+
+    </ul>
+
+    <h4 class="queries-text">Queries & help @ 9818503888</h4>
+
+    <div class="copy-box">
+      <input class="copy-input" type="text" value="Deep Sleep & Anxiety Relief  | Help: 9818503888" id="copyText1" readonly>
+      <button class="copy-btn" onclick="copyToClipboard('copyText1', this)">Copy</button>
+      <a class="wa-icon" target="_blank" id="waLink1" title="Share on WhatsApp"></a>
+    </div>
+
+    <div class="footer">💤 22–24 Jul 2025 | Evening ♡ Online Sessions <br>
+ॐ  Jai Guru Dev ॐ
+</div>
+  </div>
+
+
+  <!-- Happiness Program in Ashram Card -->
+  <div class="iphone-frame">
+    <h1>Join Waitlist</h1>
+    <h2>Happiness Program</h2>
+    <p class="subtitle">Chartered Accountants Special</p>
+    <h3>Hyper Detox with Sudarshan Kriya</h3>
+    <p class="subtitle"> with Vishal Merani, In person | English, Hindi</p>
+
+    <a  class="button" target="_blank">Booked for this season, see you in next</a> 
+    <ul class="timeline">
+      <li>Join waitlist for next season</li>
+    </ul>
+
+    <h5>Complimentary at Ashram</h5>
+    <ul class="features">
+      <li>Rudra pooja meditation on Mondays</li>
+      <li>Regular follow-ups</li>
+      <li>Sattvic food</li>
+      <li>Free repeats outside ashram</li>
+    </ul>
+
+    <ul class="timeline">
+      <li><strong>📍 Art of Living International Center</strong><br>Bengaluru, Karnataka</li>
+    </ul>
+
+    <a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="button" target="_blank">On Maps</a>
+
+   <h4 class="queries-text">Queries & help @ 9818503888</h4>
+
+    <div class="copy-box">
+      <input class="copy-input" type="text" value="Happiness Program  | Help: 9818503888" id="copyText2" readonly>
+      <button class="copy-btn" onclick="copyToClipboard('copyText2', this)">Copy</button>
+      <a class="wa-icon" target="_blank" id="waLink2" title="Share on WhatsApp"></a>
+    </div>
+
+    <div class="footer">🦦🤌🏻 Starts soon again | Bangalore ♡ Ashram <br>
+ॐ  Jai Guru Dev ॐ
+</div>
+  </div>
+
+<!-- Happiness Program in City Card -->
+  <div class="iphone-frame">
+    <h1>Join Waitlist </h1>
+    <h2>Happiness Program</h2>
+    <p class="subtitle">with Vishal Merani  </p>
+    <h3>Hyper Detox with Sudarshan Kriya</h3>
+    <p class="subtitle">In person | English, Hindi</p>
+
+    <a  class="button" target="_blank">Booked for this season, see you in next</a> 
+    <ul class="timeline">
+      <li><strong> Join waitlist </strong> </li>
+    </ul>
+
+    <ul class="features">
+      <li>Regular follow-ups</li>
+      <li>Free repeats outside ashram</li>
+    </ul>
+
+    <ul class="timeline">
+      <li><strong>📍See you soon</strong><br>Bengaluru, Karnataka</li>
+    </ul>
+
+    <a href="https://maps.app.goo.gl/Z1NnMr2MvozvDgBm7" class="button" target="_blank">On Maps</a>
+
+   <h4 class="queries-text">Queries & help @ +917507180332, +919158888206 </h4>
+
+    <div class="copy-box">
+      <input class="copy-input" type="text" value="Happiness Program | | Help: 9818503888" id="copyText22" readonly>
+      <button class="copy-btn" onclick="copyToClipboard('copyText22', this)">Copy</button>
+      <a class="wa-icon" target="_blank" id="waLink2" title="Share on WhatsApp"></a>
+    </div>
+
+    <div class="footer">🦦🤌🏻 Starts soon| Bangalore ♡ JP Nagar <br>
+ॐ  Jai Guru Dev ॐ
+</div>
+  </div>
+
 
  <!-- Oneline Meditation & Breath Card -->
   <div class="iphone-frame">
