--- a/index.html
+++ b/index.html
@@ -399,27 +399,28 @@ body.dark .icon {
 </div>
   </div>
 
+
+
+<!-- Serets of the Subtle Image Only -->
+<div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
+  <img src="SecretsoftheSubtle.png" alt="Secrets of the Subtle" style="width: 100%; border-radius: 20px;" />
+  <div class="overlay-text"> 𓆩𓆪 Screening over </div>
+</div>
+
 <!-- Secrets of the Subtle Card -->
  <div class="iphone-frame">
-  <h1>Joinin for future screenings</h1>
+  <h1>Join next airings</h1>
   <h2>Secrets of the Subtle</h2>
   <p class = "subtitle">at Kashyapa hall for Ashramites</p>
   <h4>You can also  <a href="https://www.youtube.com/watch?v=2lgWqTEZRjk" class="button" target="_blank"> Watch ❤</a> here or in AOL app </h4>
   <ul class="features">
-      <li> See you in next season </li>
+      <li> Next upcoming -> MEDITATIONS </li>
       <li> Drop us questions to ask Gurudev</li>
     </ul>
   <div class="footer">
 ॐ  Jai Guru Dev ॐ
 </div>  
 </div>
-
-<!-- Serets of the Subtle Image Only -->
-<div class="iphone-frame subtle-card-with-text" style="padding: 0; border: none; box-shadow: none;">
-  <img src="SecretsoftheSubtle.png" alt="Secrets of the Subtle" style="width: 100%; border-radius: 20px;" />
-  <div class="overlay-text"> 𓆩𓆪 </div>
-</div>
-
  <!-- Sahaj Meditation Card -->
   <div class="iphone-frame">
     <h1>Join Waitlist,</h1>
