--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@ body.dark .icon {
   
 <!-- Podcast -  Card  -->
  <div class="iphone-frame">
-  <h1>Podcasts</h1>
+  <h1>Podcasts,</h1>
   <h2>With Vishal Merani</h2>
   <a href="https://podcasts.vishalmerani.com/" class="button" target="_blank">🎧 Listen Now</a>
   <p class="subtitle">Curated talks & insights</p>
@@ -409,7 +409,7 @@ body.dark .icon {
 
 <!-- Secrets of the Subtle Card -->
  <div class="iphone-frame">
-  <h1>Join next airings</h1>
+  <h1>Join next airings,</h1>
   <h2>Secrets of the Subtle</h2>
   <p class = "subtitle">at Kashyapa hall for Ashramites</p>
   <h4>You can also  <a href="https://www.youtube.com/watch?v=2lgWqTEZRjk" class="button" target="_blank"> Watch ❤</a> here or in AOL app </h4>
