--- a/index.html
+++ b/index.html
@@ -410,7 +410,8 @@ body.dark .icon {
 <!-- Secrets of the Subtle Card -->
  <div class="iphone-frame">
   <h1>Join next airings,</h1>
-  <h2>Secrets of the Subtle</h2>
+  <h2>we recently aired </h2> 
+  <h3>Secrets of the Subtle</h3>
   <p class = "subtitle">at Kashyapa hall for Ashramites</p>
   <h4>You can also  <a href="https://www.youtube.com/watch?v=2lgWqTEZRjk" class="button" target="_blank"> Watch ❤</a> here or in AOL app </h4>
   <ul class="features">
@@ -421,23 +422,13 @@ body.dark .icon {
  <!-- Sahaj Meditation Card -->
   <div class="iphone-frame">
     <h1>Join Waitlist,</h1>
-    <h2>Online</h2>
+    <h2>for next Sahaj Mediation Batch</h2>
     <p class="subtitle">with Vishal Merani</p>
-    <h3>Lapse into meditation in minutes</h3>
+   
     <p class="subtitle">Feel Good 😌 Live Light 🪶</p>
    <ul class="features">
     <li>⤷ </li> </ul>
     <a  class="button" target="_blank">Booked for this season, see you in next</a> 
-    <ul class="features">
-      <li>⤷ Personal</li>
-      <li>⤷ Customized</li>
-      <li>⤷ Yours</li>
-    </ul>
-    <ul class="timeline">
-      <li>Happening monthly-ish, tops</li>
-      <li>We'll touch base regularly, join whatsapp 💬 </li> 
-      <li class="location-text"><strong>📍 Zoom | Online</strong></li>
-    </ul>
    <h4 class="queries-text">Queries & help @ 9818503888</h4>
     <div class="copy-box">
       <input class="copy-input" type="text" value="Sahaj Samadhi Meditation | Weekly | Help: 9818503888" id="copyText3" readonly>
@@ -473,22 +464,12 @@ body.dark .icon {
   <div class="iphone-frame">
     <h1>Join Waitlist</h1>
     <h2>Discover DSAR</h2>
-    <p class="subtitle">with Vishal Merani & Shweta Vyas</p>
+    <p class="subtitle">with Vishal Merani </p>
     <h3>Stress, Sleep, Anxiety</h3>
     <p class="subtitle">Stop struggling! Decode and conquer</p>
 
     <a  class="button" target="_blank">Booked for this season, see you in next</a> 
-    <ul class="features">
-      <li>To calm anxiety</li>
-      <li>For better sleep</li>
-      <li>Activate relaxation</li>
-    </ul>
 
-    <ul class="timeline">
-      <li>DM to join in next season</li>
-     <li class="location-text"><strong>📍 Zoom | Online</strong></li>
-
-    </ul>
 
     <h4 class="queries-text">Queries & help @ 9818503888</h4>
 
@@ -517,27 +498,11 @@ body.dark .icon {
       <li>Join waitlist for next season</li>
     </ul>
 
-    <h5>Complimentary at Ashram</h5>
-    <ul class="features">
-      <li>Rudra pooja meditation on Mondays</li>
-      <li>Regular follow-ups</li>
-      <li>Sattvic food</li>
-      <li>Free repeats outside ashram</li>
-    </ul>
-
-    <ul class="timeline">
-      <li><strong>📍 Art of Living International Center</strong><br>Bengaluru, Karnataka</li>
-    </ul>
-
     <a href="https://maps.google.com/?q=Art+of+Living+International+Center+Bengaluru" class="button" target="_blank">On Maps</a>
 
    <h4 class="queries-text">Queries & help @ 9818503888</h4>
 
-    <div class="copy-box">
-      <input class="copy-input" type="text" value="Happiness Program  | Help: 9818503888" id="copyText2" readonly>
-      <button class="copy-btn" onclick="copyToClipboard('copyText2', this)">Copy</button>
-      <a class="wa-icon" target="_blank" id="waLink2" title="Share on WhatsApp"></a>
-    </div>
+
 
     <div class="footer">🦦🤌🏻 Starts soon again | Bangalore ♡ Ashram <br>
 ॐ  Jai Guru Dev ॐ
@@ -554,27 +519,8 @@ body.dark .icon {
 
     <a  class="button" target="_blank">Booked for this season, see you in next</a> 
     <ul class="timeline">
-      <li><strong> Join waitlist </strong> </li>
+      <li><strong> DM to join Join waitlist </strong> </li>
     </ul>
-
-    <ul class="features">
-      <li>Regular follow-ups</li>
-      <li>Free repeats outside ashram</li>
-    </ul>
-
-    <ul class="timeline">
-      <li><strong>📍See you soon</strong><br>Bengaluru, Karnataka</li>
-    </ul>
-
-    <a href="https://maps.app.goo.gl/Z1NnMr2MvozvDgBm7" class="button" target="_blank">On Maps</a>
-
-   <h4 class="queries-text">Queries & help @ +917507180332, +919158888206 </h4>
-
-    <div class="copy-box">
-      <input class="copy-input" type="text" value="Happiness Program | | Help: 9818503888" id="copyText22" readonly>
-      <button class="copy-btn" onclick="copyToClipboard('copyText22', this)">Copy</button>
-      <a class="wa-icon" target="_blank" id="waLink2" title="Share on WhatsApp"></a>
-    </div>
 
     <div class="footer">🦦🤌🏻 Starts soon| Bangalore ♡ JP Nagar <br>
 ॐ  Jai Guru Dev ॐ
@@ -584,29 +530,13 @@ body.dark .icon {
 
  <!-- Oneline Meditation & Breath Card -->
   <div class="iphone-frame">
-    <h1> Workshop,</h1>
+    <h1> Join waitlist for </h1>
     <h2> Meditation and Breath </h2></h2>
-    <p class="subtitle">with Vishal Merani</p>
-    <h3> learn well-being online </h3>
-      <p class="subtitle">Just you, your breath, and a better you.</p>
+    <p class="subtitle">workshop with Vishal Merani</p>
 
     <a  class="button" target="_blank">Booked for this season, see you in next</a> 
 
-    <ul class="timeline">
-    <li>See you soon </li>
-      <li> Join waitlist </li>
-    <li><strong>📍 Online, Zoom </strong></li>
-    </ul>
-
-
     <h4>For Bookings, reach out via team +91 9818503888 </h4>
-
-    <div class="copy-box">
-      <input class="copy-input" type="text" value=" Breath & Meditation Workshop,  Help: 9818503888" id="copyText6" readonly>
-      <button class="copy-btn" onclick="copyToClipboard('copyText6', this)">Copy</button>
-      <a class="wa-icon" target="_blank" id="waLink3" title="Share on WhatsApp"></a>
-    </div>
-
     <div class="footer"> 🫁💨🖥️🧘‍♂️ ♡  Online Sessions Only <br>
 ॐ  Jai Guru Dev ॐ
 </div>
